# cpp-practice

./: CMakeLists.txt  README.md  copycons.cpp  main.cpp  mytest.cpp  names.txt  names1.cpp  names2.cpp  names3.cpp  person2.cpp  person3.cpp  point.cpp  smartptrs.cpp  test_array.cpp  test_factorial.cpp  test_math.cpp
